--- a/WinDEP-mbreda-SampleApp/BluetoothMain.xaml
+++ b/WinDEP-mbreda-SampleApp/BluetoothMain.xaml
@@ -8,6 +8,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBlock Text="BT MainPage"/>
         <Button Name="bt2ndPage" Click="bt2ndPage_Click">2nd page</Button>
     </Grid>
 </Page>
